# tauri-tray-menu

./: README.md
html/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
